<resources>
    <string name="app_name">My Spot</string>
    <string name="enter">Iniciar Sesión</string>
    <string name="subtitle_sso">Ingrese sus credenciales para iniciar</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">Historial</string>
    <string name="settings">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="support">Centro de Ayuda</string>
    <string name="support_description">Esta aplicación fue desarrollada para brindar soporte a los automovilistas que se desplazan por la ciudad y buscan una alternativa para el ahorro de gastos evitando parqueos con precios elevados.</string>
    <string name="version">v1.0.0</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyAO19p9z34znu7fAZP_5_3pJMkv9FDJC7E</string>
    <!--<string name="default_web_client_id">917772931188-kekbg1e41n2qgrnbd8noa15f5r2sjb62.apps.googleusercontent.com</string>-->
    <string name="firebase_key_id">689991450821-pc4ii70hbvltda4tlaf1cgrvlfuq4cv1.apps.googleusercontent.com</string>
    <string name="enroll">Crea un cuenta para usar los servicios</string>
    <string name="signup"><u>Registrarte</u></string>
    <string name="upload">Agregar foto</string>
    <string name="default_user">lh@gmail.com</string>
    <string name="default_pass">ltsbrth</string>
    <string name="facebook_app_id">2078440735537900</string>
    <string name="fb_login_protocol_scheme">fb2078440735537900</string>
    <string name="payment_title">Métodos de Pago</string>
    <string name="add_payment_method">Agregar</string>
    <string name="numero">Número de tarjeta</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="testCreditCardNum">4016**********1119</string>
    <string name="txtEnterCardData">Ingrese datos de tarjeta</string>
    <string name="owner">Propietario</string>
    <string name="overdueDate">Fecha de vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="search">Buscar ubicación</string>
    <string name="selected_place">Seleccione un lugar</string>
    <string name="clear_text">Limpiar</string>
    <string name="autocomplete_hint">hint</string>
    <string name="intro_message">Buscar ubicación</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="open_activity">Buscar</string>
    <string name="reservar">Reservar</string>
    <string name="cost_per_hour">Costo por hora:</string>
    <string name="owner1">Propietario:</string>
    <string name="number">Contacto:</string>
    <string name="back">Regresar</string>
    <string name="available">Horarios</string>
    <string name="no_available">No disponible</string>
    <string name="still_available">Disponible</string>
    <string name="sch1">00:00 a.m - 01:00 a.m.</string>
    <string name="sch2">01:00 a.m - 02:00 a.m.</string>
    <string name="sch3">02:00 a.m - 03:00 a.m.</string>
    <string name="sch4">03:00 a.m - 04:00 a.m.</string>
    <string name="sch5">04:00 a.m - 05:00 a.m.</string>
    <string name="sch6">05:00 a.m - 06:00 a.m.</string>
    <string name="sch7">06:00 a.m - 07:00 a.m.</string>
    <string name="sch8">07:00 a.m - 08:00 a.m.</string>
    <string name="sch9">08:00 a.m - 09:00 a.m.</string>
    <string name="sch10">09:00 a.m - 10:00 a.m.</string>
    <string name="sch11">10:00 a.m - 11:00 a.m.</string>
    <string name="sch12">11:00 a.m - 12:00 p.m.</string>
    <string name="sch13">12:00 p.m - 13:00 p.m.</string>
    <string name="sch14">13:00 p.m - 14:00 p.m.</string>
    <string name="sch15">14:00 p.m - 15:00 p.m.</string>
    <string name="sch16">15:00 p.m - 16:00 p.m.</string>
    <string name="sch17">16:00 p.m - 17:00 p.m.</string>
    <string name="sch18">17:00 p.m - 18:00 p.m.</string>
    <string name="sch19">18:00 p.m - 19:00 p.m.</string>
    <string name="sch20">19:00 p.m - 20:00 p.m.</string>
    <string name="sch21">20:00 p.m - 21:00 p.m.</string>
    <string name="sch22">21:00 p.m - 22:00 p.m.</string>
    <string name="sch23">22:00 p.m - 23:00 p.m.</string>
    <string name="sch24">23:00 p.m - 00:00 a.m.</string>
    <string name="see_comments">Ver Comentarios</string>
    <string name="busy">Reservado</string>
    <string name="sch_all">Seleccione elementos</string>
    <string name="enterReservationData">Ingrese datos de reservación</string>

    <array name="tiposTarjetas">
        <item>Visa</item>
        <item>Master Card</item>
    </array>



    <string-array name="schs">
        <item>00:00 a.m - 01:00 a.m.</item>
        <item>01:00 a.m - 02:00 a.m.</item>
        <item>02:00 a.m - 03:00 a.m.</item>
        <item>03:00 a.m - 04:00 a.m.</item>
        <item>04:00 a.m - 05:00 a.m.</item>
        <item>05:00 a.m - 06:00 a.m.</item>
        <item>06:00 a.m - 07:00 a.m.</item>
        <item>07:00 a.m - 08:00 a.m.</item>
        <item>08:00 a.m - 09:00 a.m.</item>
        <item>09:00 a.m - 10:00 a.m.</item>
        <item>10:00 a.m - 11:00 a.m.</item>
        <item>11:00 a.m - 12:00 p.m.</item>
        <item>12:00 p.m - 13:00 p.m.</item>
        <item>13:00 p.m - 14:00 p.m.</item>
        <item>14:00 p.m - 15:00 p.m.</item>
        <item>15:00 p.m - 16:00 p.m.</item>
        <item>16:00 p.m - 17:00 p.m.</item>
        <item>17:00 p.m - 18:00 p.m.</item>
        <item>18:00 p.m - 19:00 p.m.</item>
        <item>19:00 p.m - 20:00 p.m.</item>
        <item>20:00 p.m - 21:00 p.m.</item>
        <item>21:00 p.m - 22:00 p.m.</item>
        <item>22:00 p.m - 23:00 p.m.</item>
        <item>23:00 p.m - 00:00 a.m.</item>
    </string-array>
</resources>
