<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:srcCompat="@drawable/ic_credit_card"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:paddingTop="10dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:paddingBottom="10dp"-->
        <!--android:layout_marginBottom="30dp"/>-->


    <LinearLayout
        android:layout_below="@id/titleFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:id="@+id/i1">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="-25dp"
            android:src="@drawable/ic_credit_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/txtEnterCardData"
            android:textStyle="bold"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/txtPropietario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/quicksand_regular"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/owner"
        android:textAlignment="center"
        android:background="@drawable/border_radius"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:layout_below="@id/i1"/>

    <EditText
        android:id="@+id/txtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ems="10"
        android:inputType="number"
        android:fontFamily="@font/quicksand_regular"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/numero"
        android:textAlignment="center"
        android:background="@drawable/border_radius"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:layout_below="@id/txtPropietario" />

    <EditText
        android:id="@+id/txtFechaVencimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ems="10"
        android:inputType="number"
        android:fontFamily="@font/quicksand_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/overdueDate"
        android:textAlignment="center"
        android:background="@drawable/border_radius"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:layout_below="@id/txtNumero"/>

    <EditText
        android:id="@+id/txtCVV"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/cvv"
        android:ems="10"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:inputType="number"
        android:background="@drawable/border_radius"
        android:layout_below="@id/txtFechaVencimiento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txtCVV"
        android:padding="8dp">
        <Button
            android:id="@+id/btnCrear"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="12sp"
            android:ems="10"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:background="@drawable/border_radius_green_color" />


        <Button
            android:id="@+id/btnCancelar"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="12sp"
            android:ems="10"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:background="@drawable/border_radius_accent_color" />
    </LinearLayout>
</RelativeLayout>